--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=reseller-ledger
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/resellerledger
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
 
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+spring.config.import=optional:dotenv:.env
