feat: setup react with vite

--- a/.gitignore
+++ b/.gitignore
@@ -17,23 +17,11 @@ bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
 ### VS Code ###
 .vscode/
 
 .env
+
+frontend/node_modules/
+frontend/build/
+frontend/.DS_Store
